html section added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <title>MorseCodeTranslator</title>
 </head>
 <body>
-  
+  <section class="translation">
+    <h2 class="translation__header">Translate</h2>
+    <input type="text" class="translation__input-text" name="inputText" placeholder="Type Here...">
+    <input type="text" class="translation__output-text" name="outputText" placeholder="Output Here..." disabled>
+    <button class="translation__button">Translate</button>
+  </section>
 </body>
 <scirpt src="./translator.js"></scirpt>
 </html>
