code upset but codewars told me different

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
   <section class="translation">
     <h2 class="translation__header">Translate</h2>
-    <input type="text" class="translation__input-text" name="inputText" placeholder="Type Here...">
-    <input type="text" class="translation__output-text" name="outputText" placeholder="Output Here..." disabled>
-    <button class="translation__button">Translate</button>
+    <textarea class="translation__input-text" id="inputText" placeholder="Type Here..."></textarea>
+    <textarea class="translation__output-text" id="outputText"  placeholder="Output Here..." ></textarea>
+    <br>
+    <button class="translation__button" id="translateBtn">Translate</button>
   </section>
 </body>
-<scirpt src="./translator.js"></scirpt>
+<script src="./translator.js"></script>
 </html>
