--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <textarea class="translation__output-text" id="outputText"  placeholder="Output Here..." ></textarea>
     </div>
     <br>
-    <button class="translation__button" id="translateBtn">Translate</button>
+    <div class="translation__box--button">
+      <button class="translation__box--button" id="translateBtn">Translate</button>
+    </div>
   </section>
   <p id="errorMessage"></p>
 </body>
