Screenshot added and fixed minor issues with styling

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h2 class="translation__header">Translate</h2>
     <div class="translation__boxes">
       <textarea class="translation__input-text" id="inputText" placeholder="Type Here..."></textarea>
-      <textarea class="translation__output-text" id="outputText"  placeholder="Output Here..." ></textarea>
+      <textarea class="translation__output-text" id="outputText"  placeholder="Output Here..." disabled></textarea>
     </div>
     <br>
-    <div class="translation__box--button">
+    <div class="translation__box">
       <button class="translation__box--button" id="translateBtn">Translate</button>
     </div>
   </section>
